--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "sweetalert2": "^11.10.5"
   },
